# vae

./: .gitignore  pyproject.toml
notebook/: infer.ipynb
script/: train.py
src/vae/: data.py  model.py
