[tool.poetry]
name = "vae"
version = "0.1.0"
description = ""
authors = ["JingYu Ning <115336923+jrunkening@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytorch-msssim = "^1.0.0"
tqdm = "^4.66.5"

[tool.poetry.group.dev.dependencies]
torch = [
    { url = "https://download.pytorch.org/whl/cu124/torch-2.4.1%2Bcu124-cp311-cp311-linux_x86_64.whl#sha256=16e4ef3b32b45a278a0c512723f81cfa57035ebd5a75dbc2fb1360197ae06acd", platform = "linux" },
    { url = "https://download.pytorch.org/whl/cu124/torch-2.4.1%2Bcu124-cp311-cp311-win_amd64.whl#sha256=b0b3a904bc66cd6f54652d33b8509b5c64b862763c073a15cf740161c77debbc", platform = "win32"}
]
torchvision = [
    { url = "https://download.pytorch.org/whl/cu124/torchvision-0.19.1%2Bcu124-cp311-cp311-linux_x86_64.whl#sha256=fc68074915f5b08c8928ee67bb12c9b8b5ef3db9b4d233cc109a7ccb13e43296", platform = "linux"},
    { url = "https://download.pytorch.org/whl/cu124/torchvision-0.19.1%2Bcu124-cp311-cp311-win_amd64.whl#sha256=f8e00f6fb2562ee0be2008fc1c91a99d990b91ee764b764669ecceae5a210e12", platform = "win32"}
]
jupyterlab = "^4.2.5"
matplotlib = "^3.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
